--- a/PrabhaRaja/src/index.html
+++ b/PrabhaRaja/src/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="google-signin-client_id" content='366409093155-1j14va1il7vcpump7cggfjm2jq8qn2dr.apps.googleusercontent.com'>
+  <script src="https://apis.google.com/js/platform.js"></script>
 </head>
 <body>
   <app-root></app-root>
