--- a/PrabhaRaja/src/index.html
+++ b/PrabhaRaja/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PrabhaRaja</title>
+  <title>PrabhaRaja | Prabha raja Kavithaigal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="google-signin-client_id" content='366409093155-1j14va1il7vcpump7cggfjm2jq8qn2dr.apps.googleusercontent.com'>
   <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="description" content="Prabha raja kavithaigal">
 </head>
 <body>
   <app-root></app-root>
