Background image feature

--- a/PrabhaRaja/src/index.html
+++ b/PrabhaRaja/src/index.html
@@ -13,7 +13,11 @@
   <script src="https://apis.google.com/js/platform.js"></script>
   <meta name="description" content="Prabha raja kavithaigal">
 </head>
-<body>
+<body style="background-image: url('../../assets/shadow.jpg');
+background-repeat:no-repeat;
+background-size:cover;
+background-attachment: fixed;"
+>
   <app-root></app-root>
 </body>
 </html>
